# kopeninghours

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KOpeningHoursConfig.cmake.in  README.md  metainfo.yaml  pyproject.toml  setup.py  setup.py.in
.reuse/: dep5
PyKOpeningHours/: CMakeLists.txt  PyKOpeningHours.pyi  pykopeninghours.cpp  python_qt_wrappers.cpp  python_qt_wrappers.h  test.py
autotests/: CMakeLists.txt  eastertest.cpp  evaluatetest.cpp  intervalmodeltest.cpp  intervaltest.cpp  iterationtest.cpp  jsonldtest.cpp  parsertest.cpp
autotests/data/: 24_7.intervals  and_condition1.intervals  and_condition2.intervals  autocorrect1.intervals  autocorrect2.intervals  autocorrect3.intervals  basic1.intervals  basic2.intervals  basic3.intervals  closed.intervals  combine1.intervals  combine2.intervals  dayrange.intervals  fallback.intervals  leapyear.intervals  midnight1.intervals  midnight2.intervals  midnight3.intervals  monthdayrange.intervals  openendtime1.intervals  openendtime2.intervals  override1.intervals  override2.intervals  override3.intervals  ph.intervals  ph_off.intervals  sunrise.intervals
autotests/jsonlddata/: oh-array.intervals  oh-array.json  oh-simple.intervals  oh-simple.json  ohs-example.intervals  ohs-example.json  ohs-mixed.intervals  ohs-mixed.json
po/ar/: kopeninghours.po
po/ast/: kopeninghours.po
po/ca/: kopeninghours.po
po/ca@valencia/: kopeninghours.po
po/cs/: kopeninghours.po
po/de/: kopeninghours.po
po/en_GB/: kopeninghours.po
po/eo/: kopeninghours.po
po/es/: kopeninghours.po
po/eu/: kopeninghours.po
po/fi/: kopeninghours.po
po/fr/: kopeninghours.po
po/ga/: kopeninghours.po
po/gl/: kopeninghours.po
po/he/: kopeninghours.po
po/hi/: kopeninghours.po
po/hu/: kopeninghours.po
po/ia/: kopeninghours.po
po/is/: kopeninghours.po
po/it/: kopeninghours.po
po/ja/: kopeninghours.po
po/ka/: kopeninghours.po
po/ko/: kopeninghours.po
po/lt/: kopeninghours.po
po/lv/: kopeninghours.po
po/nl/: kopeninghours.po
po/nn/: kopeninghours.po
po/pl/: kopeninghours.po
po/pt/: kopeninghours.po
po/pt_BR/: kopeninghours.po
po/ro/: kopeninghours.po
po/ru/: kopeninghours.po
po/sa/: kopeninghours.po
po/sk/: kopeninghours.po
po/sl/: kopeninghours.po
po/sv/: kopeninghours.po
po/tr/: kopeninghours.po
po/uk/: kopeninghours.po
po/zh_CN/: kopeninghours.po
po/zh_TW/: kopeninghours.po
src/: CMakeLists.txt  Messages.sh  interval.cpp  interval.h  openinghours.cpp  openinghours.h  openinghours_p.h  openinghourslexer.l  openinghoursparser.y  org_kde_kopeninghours.categories  rule.cpp  rule_p.h
src/lib/: CMakeLists.txt  consecutiveaccumulator_p.h  display.cpp  display.h  easter.cpp  easter_p.h  evaluator.cpp  holidaycache.cpp  holidaycache_p.h  interval.cpp  interval.h  intervalmodel.cpp  intervalmodel.h  openinghours.cpp  openinghours.h  openinghours_p.h  openinghourslexer.l  openinghoursparser.y  rule.cpp  rule_p.h  selectors.cpp  selectors_p.h
src/qml/: CMakeLists.txt  kopeninghoursqmlplugin.cpp  qmldir  types.h
tests/: CMakeLists.txt  example.qml  osm-opening-hours-evaluate.cpp  osm-opening-hours-validate.cpp  osm-opening-hours.cpp
